--- a/style.css
+++ b/style.css
@@ -1,8 +1,108 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Work+Sans:wght@500;800&display=swap');
+
+* {
     margin: 0;
     padding: 0;
 }
 
-h1{
-    color: red;
+body {
+    font-family: 'Lato', sans-serif;
+    font-family: 'Work Sans', sans-serif;
+   
 }
+
+#navigation{
+    background-color: white;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 140px;
+    
+}
+
+nav .logo {
+    display: flex;
+}
+
+nav .logo>img {
+    width: 86.041px;
+    height: 40px;
+    margin-top: 8px;
+}
+
+nav .logo>h3 {
+    font-size: 45px;
+    padding-left: 20px;
+}
+
+.top-right-all ul li {
+    list-style: none;
+    color: #3C354F;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+}
+
+.nav-items {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 500px;
+}
+
+.nav-items .nav-top-right {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 8px;
+    background: rgba(11, 2, 35, 0.10);
+    padding: 16px;
+}
+
+.nav-items .nav-top-right img {
+    padding-left: 10px;
+    cursor: pointer;
+}
+
+
+
+
+/*********** Responsive codes *******/
+
+/* nav */
+@media only screen and (max-width: 576px){
+    nav{
+        flex-direction: column;
+    }
+
+    .nav-items{
+        width: auto;
+        flex-direction: column;
+        margin-top: 15px;
+    }
+    .nav-items li{
+        margin-top: 10px;
+    }
+}
+
+@media only screen and (min-width: 577px) and (max-width: 768px){
+    
+    nav{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .nav-items{
+        width: auto;
+        gap: 18px
+    }
+}
+
