banner section completed

--- a/style.css
+++ b/style.css
@@ -5,13 +5,28 @@
     padding: 0;
 }
 
+:root {
+    --liner-gradiant: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+}
+
 body {
     font-family: 'Lato', sans-serif;
     font-family: 'Work Sans', sans-serif;
-   
+
 }
 
-#navigation{
+button {
+    padding: 21px 40px;
+    border-radius: 48px;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: 600;
+    border: none;
+    color: white
+}
+
+#navigation {
     background-color: white;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
 }
@@ -26,7 +41,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     height: 140px;
-    
+
 }
 
 nav .logo {
@@ -47,10 +62,15 @@ nav .logo>h3 {
 
 .top-right-all ul li {
     list-style: none;
-    color: #3C354F;
+
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
+}
+
+.top-right-all ul li a {
+    text-decoration: none;
+    color: #3C354F;
 }
 
 .nav-items {
@@ -74,38 +94,155 @@ nav .logo>h3 {
     cursor: pointer;
 }
 
+.full-banner-flex {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    top: -590px;
+}
 
+.banner-left {
+    margin-top: 50px;
+}
+
+.content-positioning h4 {
+    color: #0B0223;
+    font-size: 48px;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding-bottom: 14px;
+}
+
+.content-positioning h2 {
+    font-size: 95px;
+    font-weight: 800;
+    text-transform: uppercase;
+    color: #8758F1;
+    padding-bottom: 18px;
+}
+
+.content-positioning ul li {
+    list-style: none;
+    color: #534C64;
+    font-size: 20px;
+    font-weight: 500;
+    padding-bottom: 10px;
+}
+
+.button-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.button-group>button:nth-child(1) {
+    background-color: #FF42A5;
+}
+
+.button-group>button:nth-child(2) {
+    background-color: #4EC5F7;
+}
 
 
 /*********** Responsive codes *******/
 
 /* nav */
-@media only screen and (max-width: 576px){
-    nav{
+@media only screen and (max-width: 576px) {
+    
+    nav {
         flex-direction: column;
         height: auto;
         padding-bottom: 15px;
     }
 
-    .nav-items{
+    .nav-items {
         width: auto;
         flex-direction: column;
         margin-top: 15px;
     }
-    .nav-items li{
+
+    .nav-items li {
         margin-top: 10px;
     }
 }
 
-@media only screen and (min-width: 577px) and (max-width: 768px){
-    
-    nav{
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+
+
+    nav {
         padding-left: 10px;
-        padding-right: 10px;
+        padding-right: 30px;
     }
-    .nav-items{
+
+    .nav-items {
         width: auto;
         gap: 18px
     }
 }
 
+/* banner */
+
+@media only screen and (max-width: 576px){
+
+    #banner{
+        overflow: hidden;
+    }
+
+    .full-banner-flex{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: -680px
+    }
+
+    .banner-right{
+        margin-top: 50px;
+    }
+
+    .banner-right img{
+        max-width: 370px;
+        max-height: 470px;
+    }
+}
+
+
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+
+
+    .full-banner-flex {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .content-positioning h4 {
+        font-size: 35px;
+        font-weight: 600;
+        text-transform: uppercase;
+        padding-bottom: 14px;
+    }
+
+    .content-positioning h2 {
+        font-size: 70px;
+        font-weight: 800;
+        text-transform: uppercase;
+        color: #8758F1;
+        padding-bottom: 18px;
+    }
+
+
+    button {
+        padding: 16px 20px;
+        font-size: 14px;
+    }
+
+    .button-group {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .banner-right img {
+        max-width: 400px;
+    }
+
+}
