--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ nav .logo>h3 {
     color: #3C354F;
 }
 
+.top-right-all ul li a:hover{
+    color: #F948B2;
+}
+
 .nav-items {
     display: flex;
     justify-content: space-evenly;
@@ -133,6 +137,16 @@ nav .logo>h3 {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    
+}
+
+.button-group>button{
+    transition: width 1s;
+}
+
+.button-group>button:hover{
+    position: relative;
+    bottom: 10px;
 }
 
 .button-group>button:nth-child(1) {
@@ -217,28 +231,29 @@ nav .logo>h3 {
     top: 45%;
 }
 
-#play-instantly-flex{
+#play-instantly-flex {
     display: flex;
     justify-content: space-around;
     gap: 250px;
     margin-top: 120px;
-    
+
 }
 
-.play-instantly-title{
+.play-instantly-title {
     max-width: 300px;
     position: relative;
-    top:150px;
+    top: 150px;
+    text-align: center;
 }
 
-.play-instantly-title h2{
+.play-instantly-title h2 {
     color: #0B0223;
     font-size: 48px;
     font-weight: 700;
     float: right;
 }
 
-.play-instantly-title p{
+.play-instantly-title p {
     color: #534C64;
     font-size: 18px;
     font-weight: 400;
@@ -247,10 +262,197 @@ nav .logo>h3 {
     float: inline-end;
 }
 
-.play-instantly-image img:nth-child(2){
+.play-instantly-image img:nth-child(2) {
     position: relative;
     bottom: 255px;
     left: -121px;
+}
+
+#buttons-flex {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    overflow: hidden;
+    margin-bottom: 70px;
+}
+
+.row-1 {
+    display: flex;
+    grid-template-columns: repeat(5, 1fr);
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.row-1>button {
+    gap: 5px;
+}
+
+.row-2 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+
+#buttons-flex {
+    display: grid;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+
+
+#buttons-flex button {
+    background: white;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
+    padding: 10px 10px;
+}
+
+#buttons-flex button:hover {
+    border: 1.5px solid #FF42A5;
+}
+
+#buttons-flex button p {
+    color: #0B0223;
+    font-size: 20px;
+    font-weight: 600;
+    padding-left: 3px;
+}
+
+footer {
+    background: #0B0223;
+}
+
+footer .logo {
+    display: flex;
+    justify-content: center;
+    padding-left: 10px;
+    padding-top: 50px;
+    margin-bottom: 50px;
+}
+
+footer .logo>img {
+    width: 86.041px;
+    height: 40px;
+    margin-top: 8px;
+}
+
+footer .logo>h3 {
+    font-size: 45px;
+    padding-left: 20px;
+    color: white
+}
+
+.foot-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.foot-menu ul {
+    display: flex;
+    justify-content: space-between;
+}
+
+.foot-menu ul li {
+    list-style: none;
+
+}
+
+.foot-menu ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+    padding-right: 40px;
+}
+
+.foot-menu ul li a:hover{
+    color: #F948B2;
+}
+
+.foot-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.foot-icons ul {
+    display: flex;
+    justify-content: space-between;
+}
+
+.foot-icons ul li {
+    list-style: none;
+
+}
+
+.foot-icons ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    padding-right: 40px;
+}
+
+.foot-icons ul li a:hover{
+    color:#F948B2;
+}
+
+.foot-menu-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.foot-menu-2 ul {
+    display: flex;
+    justify-content: space-between;
+}
+
+.foot-menu-2 ul li {
+    list-style: none;
+
+}
+
+.foot-menu-2 ul li a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    padding-right: 40px;
+}
+
+.foot-menu-2 ul li a:hover{
+    color: #F948B2;
+}
+
+.foot-para {
+    display: flex;
+    justify-content: center;
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 16px;
+    font-weight: 500;
+    padding-bottom: 50px;
+}
+
+/* footer */
+
+@media only screen and (max-width: 576px) {
+    .foot-menu-2, .foot-menu{
+        flex-direction: column;
+    }
 }
 
 
@@ -290,7 +492,7 @@ nav .logo>h3 {
         gap: 18px
     }
 
-    .button-group>button{
+    .button-group>button {
         width: 60%;
     }
 }
@@ -324,6 +526,9 @@ nav .logo>h3 {
 
 @media only screen and (min-width: 577px) and (max-width: 768px) {
 
+    #banner {
+        overflow: hidden;
+    }
 
     .full-banner-flex {
         padding-left: 10px;
@@ -400,28 +605,29 @@ nav .logo>h3 {
 
 /* play instantly section */
 
-@media only screen and (max-width: 576px){
-    #play-instantly-flex{
+@media only screen and (max-width: 576px) {
+    #play-instantly-flex {
         flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
         margin-top: 0;
+        gap: 100px
     }
 
-    .play-instantly-title{
+    .play-instantly-title {
         width: auto;
         position: static;
     }
 
 
-    .play-instantly-image img:nth-child(1){
+    .play-instantly-image img:nth-child(1) {
         width: 80%;
         position: relative;
         left: 20px;
     }
 
-    .play-instantly-image img:nth-child(2){
+    .play-instantly-image img:nth-child(2) {
         width: 40%;
         position: relative;
         bottom: 171px;
@@ -431,7 +637,7 @@ nav .logo>h3 {
 }
 
 @media only screen and (min-width: 577px) and (max-width: 768px) {
-    #play-instantly-flex{
+    #play-instantly-flex {
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -439,26 +645,51 @@ nav .logo>h3 {
         margin-top: 0;
     }
 
-    .play-instantly-title{
+    .play-instantly-title {
         width: auto;
         position: static;
     }
 
-    .play-instantly-image{
+    .play-instantly-image {
         margin-top: -100px;
-        
+
     }
 
-    .play-instantly-image img:nth-child(1){
+    .play-instantly-image img:nth-child(1) {
         width: 80%;
         position: relative;
         left: 20px;
     }
 
-    .play-instantly-image img:nth-child(2){
+    .play-instantly-image img:nth-child(2) {
         width: 40%;
         position: relative;
         bottom: 180px;
         left: -190px;
+    }
+}
+
+/* buttons group */
+
+@media only screen and (max-width: 576px) {
+
+    .row-1,
+    .row-2 {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+
+    .row-1,
+    .row-2 {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
     }
 }
