--- a/style.css
+++ b/style.css
@@ -450,8 +450,15 @@ footer .logo>h3 {
 /* footer */
 
 @media only screen and (max-width: 576px) {
-    .foot-menu-2, .foot-menu{
+    .foot-menu ul, .foot-menu-2 ul{
         flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .foot-para{
+        display: flex;
+        text-align: center;
     }
 }
 
