--- a/style.css
+++ b/style.css
@@ -462,6 +462,19 @@ footer .logo>h3 {
     }
 }
 
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+    .foot-menu ul, .foot-menu-2 ul{
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .foot-para{
+        display: flex;
+        text-align: center;
+    }
+}
+
 
 
 /*********** Responsive codes *******/
